--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ timezone: Asia/Korea
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Fool Blog                    # the main title
+title: July Note              # the main title
 
 tagline: Wanna Dev Fool  # it will display as the sub-title
 
