change github username

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ description: >-                        # used by seo meta and the atom feed
 url: 'https://alwayshappy0721.github.io'
 
 github:
-  username: JulySeo             # change to your github username
+  username: alwayshappy0721             # change to your github username
 
 twitter:
   username: nothing            # change to your twitter username
